Vuelos también hacia el futuro. ATENCIÓN: SI FALLA DEBIDO A UNA EXCEPCIÓN, PUEDES BUSCARLA Y COMENTARLA MOMENTÁNEAMENTE
Para que tengan sus idsProductosContenidos y tenga sentido con que el algoritmo piensa que estamos en el futuro.
Sigue dando el terrible error de "wtf, el producto agarrado fue nulo"
Y el:
java.lang.RuntimeException: ¿Cómo el algoritmo hizo que un producto programado excede a lo pedido en total?
	at pe.edu.pucp.inf.pddsbackend.simulador.eventos.planificacion.EventoAplicarResultadoPlanificacion.lambda$actualizarPedidosEnEstado$2(EventoAplicarResultadoPlanificacion.java:186)
	at java.base/java.lang.Iterable.forEach(Iterable.java:75)

:(

Y más fallos, el obtener productos escogibles devuelve lista vacía D:
Corregir luego...